# leasure

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  config.py  db.py  models.py  pyproject.toml  requirements.txt  worker.py
routers/: device.py  downloads.py  library.py  music.py  spotify.py  youtube.py
services/: archive_engine.py  artwork.py  bandcamp_engine.py  device.py  downloader.py  lyrics.py  music_aggregator.py  playlist.py  search.py  spotdl_engine.py  spotify_client.py  streamrip_engine.py  tagger.py  youtube_client.py  ytdlp_engine.py
static/css/: app.css.bak  theme.css
static/js/: app.js  leasure.js  scene.js
templates/: base.html  device.html  downloads.html  index.html  library.html  spotify.html  youtube.html
templates/macros/: components.html
templates/panels/: device.html  downloads.html  home.html  library.html  music.html
templates/partials/: album_grid.html  album_tracks.html  dashboard_stats.html  device_files.html  device_list.html  download_badge.html  download_history.html  library_tracks.html  liked_tracks.html  music_album_detail.html  music_albums.html  music_artists.html  music_playlists.html  music_tracks.html  playlist_list.html  playlist_tracks.html  queue_status.html  search_results.html  spotify_status.html  sync_diff.html  sync_result.html  yt_album_tracks.html  yt_albums.html  yt_playlist_list.html  yt_playlist_tracks.html  yt_tracks.html
